[doc] fixing links

--- a/README.adoc
+++ b/README.adoc
@@ -6,11 +6,11 @@ include::docs/intro.adoc[]
 include::docs/data_availability.adoc[]
 
 == Dataset list
-All data used for this study is listed under xref:dataset.tsv[dataset.tsv]
+All data used for this study is listed under xref:docs/dataset.tsv[docs/dataset.tsv]
 
 [%header,format=tsv]
 |===
-include::dataset.tsv[]
+include::docs/dataset.tsv[]
 |===
 
 include::docs/requirements.adoc[]
@@ -18,7 +18,7 @@ include::docs/requirements.adoc[]
 == Programs use
 
 === Description
-image:img/flowchart.svg[Embedded,1600,opts=inline]
+image:res/flowchart.svg[Embedded,1600,opts=inline]
 
 include::docs/usage.adoc[]
 
@@ -32,11 +32,11 @@ include::docs/references.adoc[]
 Please read xref:CONTRIBUTING.md[contributing] for details on our code of conduct, and the process for submitting pull requests to us.
 
 == Authors
-- *Adriano Rutz* - _Initial work_ - link:{https://gitlab.unige.ch/Adriano.Rutz}[Adriano.Rutz]
-- *Pierre-Marie Allard* - _Investigator_ - link:{https://gitlab.unige.ch/Pierre-Marie.Allard}[Pierre-Marie.Allard]
-- *Jonathan Bisson* - _Hacker in Chief_ - link:{https://gitlab.unige.ch/bjo}[bjo]
+- *Adriano Rutz* - _Initial work_ - https://gitlab.unige.ch/Adriano.Rutz[Adriano.Rutz]
+- *Pierre-Marie Allard* - _Investigator_ - https://gitlab.unige.ch/Pierre-Marie.Allard[Pierre-Marie.Allard]
+- *Jonathan Bisson* - _Hacker in Chief_ - https://gitlab.unige.ch/bjo[bjo]
 
-See also the list of link:{https://gitlab.unige.ch/Adriano.Rutz/opennaturalproductsdb/-/project_members}[contributors] who participated in this project.
+See also the list of https://gitlab.unige.ch/Adriano.Rutz/opennaturalproductsdb/-/project_members[contributors] who participated in this project.
 
 == Acknowledgments
 - Hat tip to anyone whose code was used
