--- a/docs/misc.adoc
+++ b/docs/misc.adoc
@@ -1,7 +1,9 @@
 == Miscellaneous
 
 === Molconvert issue
-At the moment, we use molconvert (commercial) for structure to chemical name conversion. Since we cannot disseminate it, you won't be able to proceed to the translation except if you modify following variables in src/paths.R accordingly:
+
+At the moment, we use molconvert (commercial) for structure to chemical name conversion.
+Since we cannot disseminate it, you won't be able to proceed to the translation except if you modify following variables in src/paths.R accordingly:
 
 [source,console]
 ----
@@ -10,6 +12,7 @@ molconvertPath <- adapt_path_to // "~/../../Applications/MarvinSuite/bin/molconv
 ----
 
 === To build the flowchart
+
 [source,console]
 ----
 yarn global add @mermaid-js/mermaid-cli
