--- a/docs/usage.adoc
+++ b/docs/usage.adoc
@@ -4,49 +4,20 @@
 
 These instructions will get you a copy of the project up and running on your local machine for development and testing purposes.
 
-==== Access to metabomaps
-
-You need to have access to the metabomaps server to be able to pull the data, if you don't you will have to pull all the DBs data from scratch.
-Add this to your
-
-[source]
-----
-~/.ssh/config
-----
-
-[source]
-----
-Host metabomaps
-  IdentityFile /home/<user_local>/.ssh/id_rsa_metabomaps
-  User <user_remote>
-  HostName metabomaps.nprod.net
-  Port 10311
-----
-
-==== Pull the repository
+==== Clone the repository
 
 [source,console]
 ----
-git pull https://gitlab.unige.ch/Adriano.Rutz/opennaturalproductsdb.git
-
-// If you need the data
-dvc pull  // This will take a while
+git clone git@gitlab.com:lotus7/lotus-processor.git
 ----
 
 ==== Having the data in a different place
 
 If you want to have the data in a different place (for example for running a test), you can set the environment variable **DATA_PATH**.
 
-==== If you want to build only a simple DB
-
-[source,console]
-----
-make -C src/1_gathering/db -B alkamid
-----
-
 ==== Use docker to build
 
-Install docker on your machine, make sure it is on your path then
+Install docker on your machine, make sure it is on your path then. ## WORKING ONLY ON LINUX FOR NOW
 
 [source,console]
 ----
@@ -62,11 +33,10 @@ If you want more informations regarding how to use MAKE, please have a look at x
 
 ==== Conda environement
 
-A "loose" environment.yml file is created and should allow to recreate a working env formthe project without beeing too restrictive on the versions to install.
+A "loose" environment.yml file is created and should allow to recreate a working env from he project without beeing too restrictive on the versions to install.
 Install it by running in the home directory.
 
-We will also create another environment for strict mirroring of the installed packages.
-(TO DO)
+environment_strict.yml is corresponds to the exact versions we used. 
 
 [source,console]
 ----
@@ -83,22 +53,19 @@ source ~/anaconda3/etc/profile.d/conda.sh
 conda activate lotus_env
 ----
 
-==== Additional bins
+==== Running the tests
 
-There are some additional bins you'll need.
-
-[source,console]
-----
-make get-bins
-----
-
-==== Working directory
-
-Your working directory should be 'src'
+This will get additional bins you need and run the whole pipeline with a small test table.
 
 [source,console]
 ----
-cd src
+make MODE=test curating-and-analysing-and-visualizing ## creating results for a test file, should fail at the last visualization step.
+make tests ## comparing if tests meet expctations ## should fail actually
 ----
 
-If you are using Visual Studio be sure to set your R and python path in the settings option to reflect your created conda environment.
+Once we will be releasing not only the tests but also the min table (1000 entries), users will be able to run (not working now):
+
+[source,console]
+----
+make MODE=min curating-and-analysing-and-visualizing
+----
