--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,7 @@ include::docs/intro.adoc[]
 include::docs/data_availability.adoc[]
 
 == Dataset list
-All data used for this study is listed under xref:docs/dataset.tsv[docs/dataset.csv]
+All data used for this study is listed under xref:docs/dataset.csv[docs/dataset.csv]
 
 [%header,format=csv]
 |===
